--- a/home/templates/fire_forcast.html
+++ b/home/templates/fire_forcast.html
@@ -16,7 +16,7 @@
     <body>
     <nav class="navbar navbar-dark bg-dark " >
   <div class="container-fluid">
-    <span class="navbar-brand mb-0 h1">Forest Fire Forcast Index (FWI) Prediction</span>
+    <span class="navbar-brand mb-0 h1">Forest Fire Weather Index (FWI) Prediction</span>
   </div>
 </nav>
 <div class="row mb-2">
