--- a/home/templates/fire_forcast.html
+++ b/home/templates/fire_forcast.html
@@ -97,7 +97,7 @@
   <div class="row mb-3">
   <label for="colFormLabel" class="col-sm-5 col-form-label" style=" font-weight: bold; font-size: 20px;" >The Forest fire weather index (FWI) : </label>
    <label for="colFormLabel" class="col-sm-3 col-form-label" style="color:Crimson; font-weight: bold; font-size: 20px;" > {{results}} </label>
-  </div
+  </div>
 </form>
 </div>      
         <script src="" async defer></script>
